--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -4,8 +4,8 @@ contact_links:
     url: https://discord.gg/boutique-to-box
     about: Join our Discord community for questions and discussions
   - name: 🤔 GitHub Discussions
-    url: https://github.com/x0lg0n/Boutique-To-Box/discussions
+    url: https://github.com/janvi100104/Boutique-To-Box/discussions
     about: Ask questions and discuss ideas with the community
   - name: 📧 Email Support
-    url: mailto:kumarsiddharthakain@gmail.com
+    url: mailto:janvisinghal10@gmail.com 
     about: Contact the maintainers directly for sensitive issues
